src/test/ui/variance/variance-contravariant-arg-trait-match.nll.stderr
error: lifetime may not live long enough
  --> $DIR/variance-contravariant-arg-trait-match.rs:13:5
   |
LL | fn get_min_from_max<'min, 'max, G>()
   |                     ----  ---- lifetime `'max` defined here
   |                     |
   |                     lifetime `'min` defined here
...
LL |     impls_get::<G,&'min i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'min` must outlive `'max`

error: lifetime may not live long enough
  --> $DIR/variance-contravariant-arg-trait-match.rs:21:5
   |
LL | fn get_max_from_min<'min, 'max, G>()
   |                     ----  ---- lifetime `'max` defined here
   |                     |
   |                     lifetime `'min` defined here
...
LL |     impls_get::<G,&'max i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'min` must outlive `'max`

error: aborting due to 2 previous errors

